# SAGE

./: CMakeLists.txt  LICENSE  Learning.md  README.md  imgui.ini  main.cpp
include/: EBO.hpp  ElementBufferObject.hpp  Engine.hpp  GLManager.hpp  IBO.h  Objects.hpp  Shader.hpp  Texture.hpp  VAO.hpp  VBO.h  VBO.hpp  VertexArrayObject.hpp  VertexBufferObject.hpp  Window.hpp  camera.hpp  element_buffer.hpp  model.hpp  object.hpp  physics.hpp  renderer.hpp  shader.h  shader.hpp  texture.hpp  vertex_array.hpp  vertex_buffer.hpp  vertex_buffer_layout.hpp  window.h  window.hpp
include/glad/: glad.h
learn/: Learning.md
shaders/: circle_shader.frag  circle_shader.vert  frag.glsl  light.frag  light.vert  main.frag  main.fs  main.vert  main.vs  object.frag  object.vert  shader.frag  shader.vert  vert.glsl
shaders/axes/: axes.frag  axes.vert
shaders/circle/: circle.frag  circle.vert
shaders/cube/: cube.frag  cube.vert
shaders/gridpoints/: gridpoints.frag  gridpoints.vert
src/: GLManager.cpp  IBO.cpp  VBO.cpp  ebo.cpp  element_buffer.cpp  glad.c  main.cpp  renderer.cpp  shader.cpp  temp.p  tempCodeRunnerFile.cpp  texture.cpp  vao.cpp  vbo.cpp  vertex_array.cpp  vertex_buffer.cpp  window.cpp
src/lib/: window.h
src/shaders/: frag.glsl  vert.glsl
